--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cli-progress": "^3.5.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
+    "log-update": "^4.0.0",
     "node-fetch": "^2.6.0",
     "readline-sync": "^1.4.10",
     "reflect-metadata": "^0.1.13",
@@ -22,11 +24,13 @@
     "typescript-require": "^0.2.10"
   },
   "devDependencies": {
-    "@types/cli-progress": "^3.4.1",
+    "@types/cli-progress": "^3.8.0",
+    "@types/lodash": "^4.14.168",
+    "@types/log-update": "^3.1.0",
+    "@types/node": "^13.5.1",
     "@types/node-downloader-helper": "^1.0.0",
     "@types/node-fetch": "^2.5.4",
     "@types/readline-sync": "^1.4.3",
-    "@types/node": "^13.5.1",
     "@types/webpack": "^4.41.2",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
