--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^2.16.1",
     "axios": "^0.21.1",
     "cli-progress": "^3.5.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "json-schema-to-typescript": "^10.1.3",
     "lodash": "^4.17.20",
     "log-update": "^4.0.0",
     "node-fetch": "^2.6.0",
@@ -21,7 +23,9 @@
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "sync-request": "^6.1.0",
-    "typescript-require": "^0.2.10"
+    "ts-transformer-keys": "^0.4.3",
+    "typescript-require": "^0.2.10",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/cli-progress": "^3.8.0",
@@ -32,6 +36,7 @@
     "@types/node-fetch": "^2.5.4",
     "@types/readline-sync": "^1.4.3",
     "@types/webpack": "^4.41.2",
+    "prisma": "^2.16.1",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
