--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --watch"
+    "dev": "ts-node ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,15 +14,12 @@
     "axios": "^0.21.1",
     "cli-progress": "^3.5.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "json-schema-to-typescript": "^10.1.3",
     "lodash": "^4.17.20",
     "log-update": "^4.0.0",
     "node-fetch": "^2.6.0",
     "readline-sync": "^1.4.10",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
-    "sync-request": "^6.1.0",
     "ts-transformer-keys": "^0.4.3",
     "typescript-require": "^0.2.10",
     "uuid": "^8.3.2"
@@ -30,9 +27,7 @@
   "devDependencies": {
     "@types/cli-progress": "^3.8.0",
     "@types/lodash": "^4.14.168",
-    "@types/log-update": "^3.1.0",
     "@types/node": "^13.5.1",
-    "@types/node-downloader-helper": "^1.0.0",
     "@types/node-fetch": "^2.5.4",
     "@types/readline-sync": "^1.4.3",
     "@types/webpack": "^4.41.2",
